v0.3:
* Fixed the last 2 frames of video being inaccessible

v0.2:
+ Video compression
+ Dynamic video decompression
+ Window scaling locked
* FPS changed from 15 to 30
* RAM improvements
* Button icons changed to ingame Petscop icons
* Fixed unbounded playhead
- Incompatible with old videos (Planned)
- Removed drag and drop video conversion
- Removed run.bat and run.sh
- Removed unnecessary .dll files

Planned Features:
+ Delete videos from menu
+ Options menu
	+ Change window size
	+ Change username
+ Backwards compatibility
+ Button to show .tsv files in file explorer