@@ -9,8 +9,7 @@ if "%video%"=="" (
 set /p name=Video Name (no-spaces): 
 set output_folder="%AppData%\framescop\framedata\%name%"
 mkdir "%output_folder%"
-del "%output_folder%\*.png"
-del "%output_folder%\*.mp4"
+del "%output_folder%\*"
 %working_dir%\ffmpeg.exe -i "%video%" -r 30 -s 320x240 "%output_folder%\%%d.png"
 %working_dir%\ffmpeg.exe -r 30 -s 320x240 -i "%output_folder%\%%d.png" -vcodec libx264 -crf 25  -pix_fmt yuv420p -map 0 -segment_time 00:01:00 -f segment -reset_timestamps 1 "%output_folder%\%%d.mp4"
 del "%output_folder%\*.png"
