@@ -1,5 +1,7 @@
 v0.3:
-* Fixed the last 2 frames of video being inaccessible
+* Fixed the last 2 frames of the video being inaccessible
+* Fixed major stuttering when playing the video in reverse
+* Fixed playhead not updating when dragging to edges
 
 v0.2:
 + Video compression
@@ -21,3 +23,4 @@ Planned Features:
 	+ Change username
 + Backwards compatibility
 + Button to show .tsv files in file explorer
+* Fix crash when too many videos exist
